Adjust section margins to avoid bleed into another adjacent section, refactor move code and fix some allowDrop bugs in the process

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -5873,8 +5873,8 @@ li.selected .divider_section_only:before {
 .frm_sorting li.ui-state-default.edit_field_type_divider {
 	overflow: visible;
 	position: relative;
-	padding: 0 0 0 20px;
-	margin: 25px 0 0 -20px;
+	padding: 0 0 0 5px;
+	margin: 25px 0 0 -5px;
 	border-left: 1px solid var(--primary-hover);
 	transition: border 0.7s ease-out;
 }
